[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
maud = "0.27"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
image = "0.25.9"
comrak = "0.50"
rand = "0.10"
mime = "0.3.17"
mime_guess = "2.0.5"