[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
maud = "0.27"
#sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
image = "0.25.9"
comrak = "0.50"
rand = "0.10"
mime = "0.3.17"
mime_guess = "2.0.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }
#log = "0.4.29"
#tower = "0.5.3"
#tower-http = { version = "0.6.8", features = ["trace"] }
#tracing = "0.1.44"
#tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }